# updator

./: CMakeLists.txt  FinishedPage.qml  HomePage.qml  QT6_MIGRATION_NOTES.md  UpdatePage.qml  UpdatingPage.qml  main.qml  qapltemporary.h  updatorhelper.cpp  updatorhelper.h
debian/: control
